--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <h1 class="headings">bought:</h1>
       <input type="text" id="bought" name="item"><button id="boughtButton">add</button>
     <ul class="boughtList">
-      <li>cat bed<button class="remove">remove</button><button class="buyAgain">buy again!</button></li>
+      <li>cat bed<br><button class="remove">remove</button><button class="buyAgain">buy again!</button></li>
     </ul>
   </div>
 </div>
